# shairplay

src/: Makefile.am  configure.ac  shairplay.pc.in
src/bindings/: Makefile.am
src/include/: Makefile.am
src/lib/: Makefile.am  base64.c  http_response.c  raop.c  raop_buffer.c  raop_rtp.c
src/lib/crypto/: os_port.h
src/win/shairplay/: shairplay.sln
src/win/shairplay/shairplay/: shairplay.vcxproj  shairplay.vcxproj.filters
